syntax = "proto3";

option java_outer_classname = "CriptoMessage";

message GenericMessage{
	bytes criptograma = 1;
	bytes iv = 2;
	bytes mac = 3;
}